layout bug fixes

--- a/src/styles/components/menu/bar.module.css
+++ b/src/styles/components/menu/bar.module.css
@@ -1,27 +1,74 @@
-.right_vertical_bar_container{
- margin-left: 10%;
- max-width: 8vw;
- height: 100%;
+.title{
+    margin: 0;
+    padding: 0;
+    font-size: 2vw;
+    min-width:1px;
+    word-wrap: break-word;
+    color: white;
+    text-align: center;
+}   
+
+
+
+
+.icon{
+    color: white;
+    position: absolute;
+    top: 50vh;
+    left: 2.5vw ;
+    font-size: xx-large;
+    padding: 0;
+    margin: 0;
 }
 
 .right_vertical_bar{
+    flex-shrink: 0;
     min-height: 75vh;
-    max-width: 8vw;
+    min-width: 8vw;
     background-image: url("/store.jpg");
     background-size: 100vh;
     padding: 0;
-    margin: 0;
+    margin: 0 10vw  0 10vw;
     /*clip bothtop and bottom*/
     /*clip only top*/
+    position: relative;
     clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 calc(100% - 5vw));
 }
 
 .right_vertical_bar_black_screen{
+    flex-shrink: 0;
     min-height: 75vh;
-    max-width: 8vw;
+    min-width: 8vw;
     padding: 0;
     margin: 0;
     clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 calc(100% - 5vw));
+    background-color: black;
+    opacity: 0.5;  
+}
+
+
+
+.left_vertical_bar{
+
+    flex-shrink: 0;
+    min-height: 75vh;
+    min-width: 8vw;
+    background-image: url("/contact.jpg");
+    background-size: cover;
+    padding: 0;
+    margin: 0 0 0 0;
+    /*clip bothtop and bottom*/
+    /*clip only top*/
+    clip-path: polygon(0 1%, 100% 10%, 100% calc(100% - 5vw), 0% 100%);
+}
+
+.left_vertical_bar_black_screen{
+    flex-shrink: 0;
+    min-height: 75vh;
+    min-width: 8vw;
+    padding: 0;
+    margin: 0;
+    clip-path: polygon(0 1%, 100% 10%, 100% calc(100% - 5vw), 0% 100%);
     background-color: black;
     opacity: 0.5;  
 }
