--- a/src/styles/components/menu/menuscreen.module.css
+++ b/src/styles/components/menu/menuscreen.module.css
@@ -11,7 +11,15 @@
 }
 
 .menu_btn {
+  margin: 0;
+  padding: 0;
   color: white;
   font-size: 2.5vw;
   cursor: pointer;
 }
+
+
+.menu_btn_container{
+  display:flex;
+}
+
