--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,11 @@
   display: none !important;
 }
 
+p,h1{
+  padding: 0;
+  margin: 0;
+}
+
 html,
 body {
   --primary-font: 'Anaheim', sans-serif;
